chore: change label voice option

--- a/media/webview.html
+++ b/media/webview.html
@@ -1113,8 +1113,8 @@
             </div>
             <div id="stopAudioContainer" class="flex justify-center mt-4">
                 <select id="audioControl" class="h-12 p-2 flex items-center justify-center text-white bg-grey rounded">
-                    <option value="play">Play Audio</option>
-                    <option value="mute">Mute Audio</option>
+                    <option value="play">Voice On</option>
+                    <option value="mute">Voice Off</option>
                 </select>
                 <button id="startButton" class="hidden">Speak</button>
                 <div id="output" class="hidden">Start</div>
