--- a/media/webview.html
+++ b/media/webview.html
@@ -55,6 +55,9 @@
                     }
                 </script>
         <script type="module">
+            var messageArray = []
+            var talkDuration = 0
+            var talkMessage = ""
             document.addEventListener('DOMContentLoaded', function () {
                 const token = localStorage.getItem('token')
                 const userId = localStorage.getItem('userId')
@@ -147,7 +150,8 @@
             }
 
             async function sendMessageToApi(message) {
-
+                let newMessageArray = [...messageArray, { role: 'user', message: message }]
+                displayMessagesAssistant({ role: 'user', message: message })
                 const historyId = localStorage.getItem('historyId')
                 const userId = localStorage.getItem('userId')
                 const character = localStorage.getItem('character')
@@ -172,9 +176,30 @@
                     if (!response.ok) {
                         throw new Error('Failed to send message')
                     }
+                    const reader = response.body.getReader()
+                    const decoder = new TextDecoder("utf-8")
+                    let done = false
 
-                    const newMessage = await response.json()
-                    // displayMessages([newMessage])
+                    let assistantMessage = '' // Variabel untuk menyimpan pesan assistant
+                    const assistantRole = 'assistant' // Role untuk pesan assistant
+                    while (!done) {
+                        const { value, done: doneReading } = await reader.read()
+                        done = doneReading
+                        // Decode dan tambahkan ke assistantMessage
+                        assistantMessage += decoder.decode(value, { stream: true })
+                        console.log('assistantMessage', assistantMessage) // You can process each chunk here }
+                        displayMessagesAssistant({ role: assistantRole, message: assistantMessage })
+                    }
+                    messageArray = [...messageArray, { role: assistantRole, message: assistantMessage }]
+                    console.log('talkMessage', talkMessage)
+                    console.log('talkMessage', talkDuration)
+                    if (talkDuration > 0) {
+                        let talking = talkDuration / 4
+                        if (assistantMessage.length < 300 && isAudioPlay) {
+                            startTalking(talking, assistantMessage)
+                        }
+                    }
+
                     messageInput.value = ''
 
                     const sendMessageButton = document.getElementById('button-send')
@@ -182,8 +207,20 @@
 
                     loader.classList.add('hidden') // Sembunyikan loader
                     sendMessageButton.classList.remove('hidden') // Tampilkan tombol kembali
+                    data.assistantMessage = assistantMessage
+                    const responsePost = await fetch('https://chat.pacar-ai.my.id/api/messages', {
+                        method: 'PUT',
+                        headers: {
+                            'Authorization': `Bearer ${localStorage.getItem('token')}`,
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(data)
+                    })
+                    if (!responsePost.ok) {
+                        throw new Error('Failed to send message')
+                    }
 
-                    loadMessages(historyId)
+                    // loadMessages(historyId)
                 } catch (error) {
                     console.error('Error sending message:', error)
                 }
@@ -575,13 +612,94 @@
                     }
                 })
 
-                if (talkDuration > 0) {
-                    let talking = talkDuration / 4
-                    if (talkMessage.length < 300 && isAudioPlay) {
-                        startTalking(talking, talkMessage)
-                    }
+
+
+                content.appendChild(chatContainer)
+            }
+
+            function displayMessagesAssistant(msg) {
+                const content = document.getElementById('content')
+
+                const chatContainer = document.createElement('div')
+                chatContainer.className = 'flex-grow overflow-y-auto p-4 bg-chat custom-scrollbar'
+                const parts = msg.message.split(/(```[\s\S]*?```|`[^`]+`|\[selection\][\s\S]*?\[selection\]|\[fullcode\][\s\S]*?\[fullcode\]|\[labelInstruction\][\s\S]*?\[labelInstruction\]|\[files\][\s\S]*?\[files\])/g)
+
+                const messageDiv = document.createElement('div')
+                messageDiv.className = `mb-2 flex ${msg.role === 'user' ? 'justify-end' : 'justify-start'}`
+
+                if (msg.role === 'assistant') {
+                    const avatarImg = document.createElement('img')
+                    avatarImg.src = `https://chat.pacar-ai.my.id${localStorage.getItem("avatar")}` // Replace with actual avatar path
+                    avatarImg.alt = 'Pacar Avatar'
+                    avatarImg.className = 'w-50px h-50px rounded-full mr-2'
+                    messageDiv.appendChild(avatarImg)
                 }
 
+                const messageContent = document.createElement('div')
+                messageContent.className = `inline-block p-2 rounded-lg ${msg.role === 'user' ? 'bg-blue-500 text-white' : 'bg-grey text-grey-100'}`
+                messageContent.style.whiteSpace = 'pre-wrap'
+
+                parts.forEach((part, i) => {
+                    if (part.startsWith('[selection]') && part.endsWith('[selection]')) {
+                        //skip
+                    } else if (part.startsWith('[fullcode]') && part.endsWith('[fullcode]')) {
+                        //skip
+                    } else if (part.startsWith('[labelInstruction]') && part.endsWith('[labelInstruction]')) {
+                        //skip
+                    } else if (part.startsWith('[files]') && part.endsWith('[files]')) {
+                        //skip
+                    } else if (part.startsWith('```') && part.endsWith('```')) {
+
+                        let codeContent = part.slice(3, -3).trim()
+
+                        const codeLines = codeContent.split('\n')
+                        const firstLine = codeLines[0].trim()
+                        const languageRegex = /^(javascript|python|java|c\+\+|c#|ruby|go|php|typescript|swift|kotlin|json|jsx|tsx|html|css|xml|c|rust|perl|r|bash)$/i
+
+                        if (languageRegex.test(firstLine)) {
+                            codeContent = codeLines.slice(1).join('\n').trim() // Remove the first line if it matches a language
+                        }
+
+                        const codeDiv = document.createElement('div')
+                        codeDiv.className = 'p-2 rounded-lg mb-2 wrap'
+
+                        const pre = document.createElement('pre')
+
+                        const code = document.createElement('code')
+                        code.className = `language-${firstLine}` // Menambahkan kelas bahasa
+                        code.textContent = codeContent
+                        pre.appendChild(code)
+
+                        codeDiv.appendChild(pre)
+
+                        Prism.highlightElement(code)
+
+                        const copyButton = document.createElement('button')
+                        copyButton.textContent = 'Copy'
+                        copyButton.className = 'mt-2 bg-blue-500 text-white px-2 py-1 rounded'
+                        copyButton.onclick = () => handleCopy(codeContent)
+                        codeDiv.appendChild(copyButton)
+
+                        messageContent.appendChild(codeDiv)
+                    } else if (part.startsWith('`') && part.endsWith('`')) {
+                        const inlineCode = part.slice(1, -1)
+                        const codeSpan = document.createElement('code')
+                        codeSpan.className = 'bg-gray-800 text-white p-1 rounded'
+                        codeSpan.textContent = inlineCode
+                        messageContent.appendChild(codeSpan)
+                        talkDuration += part.length
+                        talkMessage = `${talkMessage}. ${part}`
+                    } else {
+                        const textSpan = document.createElement('span')
+                        textSpan.textContent = part
+                        messageContent.appendChild(textSpan)
+                        talkDuration += part.length
+                        talkMessage = `${talkMessage}. ${part}`
+                    }
+                })
+
+                messageDiv.appendChild(messageContent)
+                chatContainer.appendChild(messageDiv)
                 content.appendChild(chatContainer)
             }
 
